--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-11-22 01:13+0300\n"
-"PO-Revision-Date: 2016-11-22 01:11+0300\n"
+"POT-Creation-Date: 2016-11-23 04:04+0300\n"
+"PO-Revision-Date: 2016-11-23 04:28+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ru\n"
@@ -89,11 +89,11 @@ msgstr "Ордер не может быть облачен без отхоног
 
 #: core/views.py:865
 msgid "Unsupported payment provider"
-msgstr ""
+msgstr "Данный способ оплаты не поддерживается"
 
 #: core/views.py:902
 msgid "Page not found"
-msgstr ""
+msgstr "Страница не найдена"
 
 #: nexchange/settings.py:119 templates/core/partials/seo_footer.html:20
 msgid "About Us"
@@ -139,29 +139,29 @@ msgstr "Поддержка"
 msgid "Trading Guide"
 msgstr "Инструкция"
 
-#: nexchange/tasks.py:40 nexchange/tasks.py:73
+#: nexchange/tasks.py:41 nexchange/tasks.py:74
 msgid "Your order {}:  is released"
-msgstr ""
+msgstr "Ваш заказ {}: выполнен"
 
 #: payments/models.py:70 payments/models.py:94
 msgid "Nonce"
-msgstr ""
+msgstr "Данный"
 
 #: payments/models.py:92
 msgid "Uni"
-msgstr ""
+msgstr "Один"
 
 #: payments/models.py:96
 msgid "Token"
-msgstr ""
+msgstr "Токен"
 
 #: payments/models.py:98
 msgid "Default"
-msgstr ""
+msgstr "Текущий"
 
 #: payments/models.py:99
 msgid "Delete"
-msgstr ""
+msgstr "Удалить"
 
 #: static/js/tests/fixtures/ProfileFixture.html:5
 #: templates/core/user_profile.html:18
@@ -189,10 +189,8 @@ msgid "Send-me the token again"
 msgstr "Пришлать код подтверждения еще раз"
 
 #: templates/core/base.html:30
-#, fuzzy
-#| msgid "BTC Exchange"
 msgid "Nexchange"
-msgstr "биткоин-обмен"
+msgstr "Nexchange"
 
 #: templates/core/base.html:58
 msgid "Service unavailable. Please try again later."
@@ -206,6 +204,7 @@ msgstr "Биткоин-обмен"
 
 #: templates/core/index_order.html:13 templates/core/index_order.html:66
 #: templates/core/index_order.html:173
+#: templates/core/partials/modals/order_success_braintree.html:33
 #: templates/core/partials/steps/step_confirmation.html:9
 #: templates/referrals/index_referrals.html:13
 msgid "BTC"
@@ -258,10 +257,8 @@ msgid "Withdraw Address"
 msgstr "Адрес для изьятия"
 
 #: templates/core/index_order.html:132
-#, fuzzy
-#| msgid "Not Paid"
 msgid "Not Defined"
-msgstr "Не оплачено"
+msgstr "Не определено"
 
 #: templates/core/index_order.html:169
 msgid "Date"
@@ -320,7 +317,7 @@ msgstr "Полное имя"
 
 #: templates/core/partials/menu.html:29
 msgid "Toggle navigation"
-msgstr ""
+msgstr "Переключение навигации"
 
 #: templates/core/partials/menu.html:41
 msgid "Home"
@@ -350,21 +347,24 @@ msgstr "Зарегистрироваться"
 msgid "Order placed successfully"
 msgstr "Платеж выполнен успешно"
 
-#: templates/core/partials/modals/order_success_braintree.html:27
-#: templates/core/partials/modals/order_success_buy.html:11
-msgid "Please make payment to the following"
-msgstr "Пожалуйста, чтобы выполнить платеж, сделайте следующее"
+#: templates/core/partials/modals/order_success_braintree.html:33
+msgid "Buying"
+msgstr "Покупка"
 
-#: templates/core/partials/modals/order_success_braintree.html:70
+#: templates/core/partials/modals/order_success_braintree.html:67
 #: templates/core/partials/modals/order_success_buy.html:21
 msgid "Please put the following reference in the comment:"
 msgstr "Пожалйуста приложите следующую ссылку к комментарию"
 
-#: templates/core/partials/modals/order_success_braintree.html:79
+#: templates/core/partials/modals/order_success_braintree.html:76
 #: templates/core/partials/modals/order_success_buy.html:30
 #: templates/core/partials/success_order_sell.html:17
 msgid "Notice that you must pay until"
 msgstr "Обратите внимания, что вы должны заплатить до"
+
+#: templates/core/partials/modals/order_success_buy.html:11
+msgid "Please make payment to the following"
+msgstr "Пожалуйста, чтобы выполнить платеж, сделайте следующее"
 
 #: templates/core/partials/modals/order_success_sell.html:11
 #: templates/core/partials/modals/order_success_sell.html:29
@@ -373,7 +373,7 @@ msgstr "Пожалуйста отправьте биткоин по следую
 
 #: templates/core/partials/modals/order_success_sell.html:21
 msgid "Copy"
-msgstr ""
+msgstr "Копировать"
 
 #: templates/core/partials/modals/order_success_sell.html:34
 msgid "You choose to get paid by:"
@@ -419,21 +419,19 @@ msgstr "Дальше"
 
 #: templates/core/partials/modals/sell.html:40
 msgid "Back"
-msgstr ""
+msgstr "Назад"
 
 #: templates/core/partials/modals/success_order.html:10
-msgid "Success"
-msgstr "Успешно"
+msgid "Complete payment & get bitcoins now"
+msgstr "Закончить платеж и получить биткоины"
 
 #: templates/core/partials/modals/success_order.html:23
 msgid "Go to Robokassa"
 msgstr "Перейти в Робокассу"
 
 #: templates/core/partials/modals/success_order.html:26
-#, fuzzy
-#| msgid "Cash payment"
 msgid "Send payment"
-msgstr "Наличными"
+msgstr "Отправить платеж"
 
 #: templates/core/partials/modals/success_order.html:28
 msgid "Get your bitcoins"
@@ -441,15 +439,11 @@ msgstr "Получить биткоины"
 
 #: templates/core/partials/payment_options.html:7
 msgid "Credit cards"
-msgstr ""
+msgstr "Кредитная карта"
 
-#: templates/core/partials/payment_options.html:18
-msgid "Wallets"
-msgstr "Кошелек"
-
-#: templates/core/partials/payment_options.html:29
-msgid "Bank"
-msgstr "Банк"
+#: templates/core/partials/payment_options.html:45
+msgid "This section is under development"
+msgstr "Раздел находится в разработке"
 
 #: templates/core/partials/seo_footer.html:9
 msgid "ACCOUNT"
@@ -482,14 +476,14 @@ msgstr "Далее"
 #: templates/core/partials/spa_navigation.html:10
 #: templates/core/partials/steps/old_amount.html:26
 #: templates/core/partials/steps/step_amount.html:31
-#: templates/core/partials/steps/step_confirmation.html:42
+#: templates/core/partials/steps/step_confirmation.html:41
 msgid "Sell"
 msgstr "Продать"
 
 #: templates/core/partials/spa_navigation.html:14
 #: templates/core/partials/steps/old_amount.html:11
 #: templates/core/partials/steps/step_amount.html:25
-#: templates/core/partials/steps/step_confirmation.html:43
+#: templates/core/partials/steps/step_confirmation.html:42
 msgid "Buy"
 msgstr "Купить"
 
@@ -507,7 +501,7 @@ msgstr "Ваш номер телефона"
 
 #: templates/core/partials/steps/step_authentication.html:15
 msgid "Human check"
-msgstr ""
+msgstr "Ручная проверка"
 
 #: templates/core/partials/steps/step_authentication.html:24
 msgid "Code from SMS"
@@ -533,23 +527,21 @@ msgstr "за"
 msgid "Payment Method"
 msgstr "Метод оплаты"
 
-#: templates/core/partials/steps/step_confirmation.html:44
+#: templates/core/partials/steps/step_confirmation.html:43
 msgid "Cancel"
 msgstr "Отмена"
 
 #: templates/core/partials/steps/step_reply_payment.html:8
 msgid "Bad signature"
-msgstr ""
+msgstr "Неверная сигнатура"
 
 #: templates/core/partials/steps/step_reply_payment.html:10
 msgid "Your payment failed. You can try again or make new payment"
-msgstr ""
+msgstr "Ваш платеж на прошел. Попробуйте еще раз"
 
 #: templates/core/partials/steps/step_reply_payment.html:14
-#, fuzzy
-#| msgid "Send again"
 msgid "Try again"
-msgstr "Прислать код еще раз"
+msgstr "Попробуйте еще раз"
 
 #: templates/core/partials/steps/step_reply_payment.html:16
 #, fuzzy
@@ -600,32 +592,32 @@ msgstr "Регистрация"
 #: templates/referrals/index_referrals.html:35
 #: templates/referrals/index_referrals.html:74
 msgid "Partial phone"
-msgstr ""
+msgstr "Неполный номер телефона"
 
 #: templates/referrals/index_referrals.html:41
 #: templates/referrals/index_referrals.html:75
 msgid "Confirmed orders count"
-msgstr ""
+msgstr "Количество подтвержденных заказов"
 
 #: templates/referrals/index_referrals.html:47
 #: templates/referrals/index_referrals.html:76
 msgid "Turnover"
-msgstr ""
+msgstr "Оборот"
 
 #: templates/referrals/index_referrals.html:53
 #: templates/referrals/index_referrals.html:77
 msgid "Revenua"
-msgstr ""
+msgstr "Обновить"
 
 #: templates/referrals/index_referrals.html:59
 #: templates/referrals/index_referrals.html:78
 msgid "Last seen"
-msgstr ""
+msgstr "Последний визит"
 
 #: templates/referrals/index_referrals.html:64
 #: templates/referrals/index_referrals.html:79
 msgid "Id"
-msgstr ""
+msgstr "id"
 
 #: templates/referrals/index_referrals.html:93
 #, fuzzy
@@ -634,14 +626,12 @@ msgid "No referrals found"
 msgstr "Не найдено ни одной записи"
 
 #: templates/registration/password_reset_complete.html:9
-#, fuzzy
-#| msgid "Your phone has been verified."
 msgid "Your password has been reset."
-msgstr "Ваш телефон был подтвержден."
+msgstr "Ваш пароль сброшен."
 
 #: templates/registration/password_reset_complete.html:10
 msgid "You can now login using this new password."
-msgstr ""
+msgstr "Вы можете зайти используя новый пароль."
 
 #: templates/registration/password_reset_complete.html:13
 #, fuzzy
@@ -651,7 +641,16 @@ msgstr "Войти"
 
 #: templates/registration/registration_base.html:5
 msgid "Password Reset"
-msgstr ""
+msgstr "Сбросить пароль"
+
+#~ msgid "Success"
+#~ msgstr "Успешно"
+
+#~ msgid "Wallets"
+#~ msgstr "Кошелек"
+
+#~ msgid "Bank"
+#~ msgstr "Банк"
 
 # templates/core/partials/forms/card.html:1
 #~ msgid "Add a new payout card"
