Feature/encapsulate data (#180)
* stop annying emails, add uphold btc card param to env

* encaps data

* more stuff

* remove wercker from data

* remove wercker from data

* make order buy work

* fix the damn tests

* fix damn tests, damn css and javascripts

--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -245,7 +245,7 @@ msgstr "Сбросить пароль"
 #: templates/accounts/registration_base.html:12
 #: templates/accounts/user_login.html:8 templates/accounts/user_profile.html:9
 #: templates/accounts/user_registration.html:8 templates/core/index.html:7
-msgid "BTC - Exchange"
+msgid "Nexchange"
 msgstr "Биткоин-обмен"
 
 #: templates/accounts/user_login.html:8 templates/accounts/user_login.html:18
