--- a/locale/es/LC_MESSAGES/djangojs.po
+++ b/locale/es/LC_MESSAGES/djangojs.po
@@ -3,134 +3,136 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR. SPANISH
 #
-#: node_modules/x-editable/test/libs/jquery/jquery-1.8.2.min.js:2
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-04-11 18:43+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2017-04-14 11:04+0200\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.0.1\n"
+"Last-Translator: \n"
+"Language: es\n"
 
 #: node_modules/babel-polyfill/browser.js:1
 #: node_modules/babel-polyfill/dist/polyfill.min.js:1
 msgid "delete"
-msgstr ""
+msgstr "borrar"
 
 #: node_modules/babel-polyfill/browser.js:1
 #: node_modules/babel-polyfill/dist/polyfill.min.js:1
 msgid "has"
-msgstr ""
+msgstr "tiene"
 
 #: node_modules/babel-polyfill/browser.js:1
 #: node_modules/babel-polyfill/dist/polyfill.min.js:1
 msgid "get"
-msgstr ""
+msgstr "obtener"
 
 #: node_modules/x-editable/src/inputs/combodate/lib/moment.min.1.7.2.js:6
 msgid "year"
-msgstr ""
+msgstr "año"
 
 #: static/bundles/bundle.js:32 static/js/modules/orders.js:83
 msgid "Minimal order amount is "
-msgstr ""
+msgstr "La cantidad mínima de la orden es "
 
 #: static/bundles/bundle.js:32 static/js/main.js:576 static/js/profile.js:5
 msgid "The code you sent was incorrect. Please, try again."
 msgstr ""
+"El código que ha introducido es incorrecto. Por favor, vuelva a intentarlo."
 
 #: static/bundles/bundle.js:32 static/js/main.js:370 static/js/main.js:400
 #: static/js/main.js:484 static/js/main.js:581 static/js/modules/orders.js:391
 msgid "Something went wrong. Please, try again."
-msgstr ""
+msgstr "Algo fue mal. Por favor, vuelva a intentarlo."
 
 #: static/bundles/bundle.js:32 static/js/main.js:52
 msgid "Account Holder is required"
-msgstr ""
+msgstr "Se requiere un titular de la cuenta"
 
 #: static/bundles/bundle.js:32 static/js/main.js:55
 msgid "Account Email is required"
-msgstr ""
+msgstr "Se requiere un correo electrónico de la cuenta"
 
 #: static/bundles/bundle.js:32 static/js/main.js:56
 msgid "Please enter a valid email"
-msgstr ""
+msgstr "Por favor, introduzca un correo electrónico válido"
 
 #: static/bundles/bundle.js:32 static/js/main.js:59
 msgid "Account Number is required"
-msgstr ""
+msgstr "Se requiere un numero de cuenta"
 
 #: static/bundles/bundle.js:32 static/js/main.js:60
 msgid "Please enter a valid number (i.e. 123456)"
-msgstr ""
+msgstr "Por favor, introduzca un número válido (p.ej. 123456)"
 
 #: static/bundles/bundle.js:32 static/js/main.js:63
 msgid "BIC/SWIFT is required"
-msgstr ""
+msgstr "Se requiere código BIC/SWIFT"
 
 #: static/bundles/bundle.js:32 static/js/main.js:64
 msgid "Please enter a BIC/SWIFT (i.e. BELADEBEXXX)"
-msgstr ""
+msgstr "Por favor, introduzca un código BIC/SWIFT (p.ej. BELADEBEXXX)"
 
 #: static/bundles/bundle.js:32 static/js/main.js:344
 #: static/js/modules/orders.js:378
 msgid "Buy order placed successfully"
-msgstr ""
+msgstr "Orden de compra efectuada con éxito"
 
 #: static/bundles/bundle.js:32 static/js/main.js:348
 #: static/js/modules/orders.js:382
 msgid "Sell order placed successfully"
-msgstr ""
+msgstr "Orden de venta efectuada con éxito"
 
 #: static/bundles/bundle.js:32 static/js/main.js:475
 msgid "Order paid successfully"
-msgstr ""
+msgstr "Orden pagada con éxito"
 
 #: static/bundles/bundle.js:32 static/js/main.js:497
 msgid "Please correct form errors and try again"
-msgstr ""
+msgstr "Por favor, corrija los errores del formulario y vuelva a intentarlo"
 
 #: static/bundles/bundle.js:32 static/js/profile.js:22
 msgid ""
 "SMS token sent. Fill in the verification form field and click on 'Verify "
 "phone now'."
 msgstr ""
+"Código de autentificación enviado por SMS. Rellene el formulario de "
+"verificación y haga click en ‘Verificar teléfono ahora’."
 
 #: static/bundles/bundle.js:70
 msgid "d"
-msgstr ""
+msgstr "d"
 
 #: static/bundles/bundle.js:70
 msgid "o"
-msgstr ""
+msgstr "o"
 
 #: static/bundles/bundle.js:70
 msgid "m"
-msgstr ""
+msgstr "m"
 
 #: static/bundles/bundle.js:70
 msgid "y"
-msgstr ""
+msgstr "y"
 
 #: static/bundles/bundle.js:70
 msgid "@"
-msgstr ""
+msgstr "@"
 
 #: static/bundles/bundle.js:70
 msgid "!"
-msgstr ""
+msgstr "!"
 
 #: static/bundles/bundle.js:83 static/run.js:39
 msgid "You were locked out, please try again in "
-msgstr ""
+msgstr "Ha sido usted bloqueado. Por favor, vuelva a intentarlo en "
 
 #: static/bundles/bundle.js:83 static/run.js:43
 msgid "minutes"
-msgstr ""
+msgstr "minutos"
